docs: updated README.md